# ot-harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  tekoalytyokalujenkaytto.md  testaus.md  tuntikirjanpito.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
src/: database_connection.py  index.py  initialize_database.py
src/data/: database.sqlite
src/entities/: piece.py  user.py
src/repositories/: closet_repository.py  gameplay.py  user_repository.py
src/services/: closet_service.py
src/tests/: closet_repository_test.py  login_tests.py  piece_test.py  service_test.py  user_repository_test.py  user_test.py
src/ui/: create_acc_view.py  edit_view.py  gamescreen.py  levels.py  loginscreen.py  main_view.py  start_view.py  the_ui.py  ui.py  upload_view.py
