[project]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = [
    {name = "Mari Lehtikari",email = "mari.lehtikari@helsinki.fi"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "invoke (>=2.2.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "coverage (>=7.8.0,<8.0.0)",
    "pylint (>=3.3.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
