[project]
name = "maksukortti"
version = "0.1.0"
description = ""
authors = [
    {name = "Mari Lehtikari",email = "mari.lehtikari@helsinki.fi"}
]
readme = "README.md"
requires-python = "^3.8"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

